--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                          <h1 class="wow fadeInUp" data-wow-delay="0.6s">Mathi Ravi Chandra</h1>
                          <h2 class="wow fadeInUp" data-wow-delay="0.6s">Web designer</h2>
                          <p class="wow fadeInUp" data-wow-delay="0.8s"><q>The hardest choices require the strongest wills.</q></p>
-                        <a  href="/images/Ravi Chandra Mathi.docx" class="wow fadeInUp section-btn btn btn-success smoothScroll" data-wow-delay="1s" download>Resume</a>
+                        <a  href="/images/Ravi Chandra Mathi 2024 Resume.pdf" class="wow fadeInUp section-btn btn btn-success smoothScroll" data-wow-delay="1s" download>Resume</a>
                     </div>
                </div>
 
